1.3.13
	+ Bug fix: cancel jobs
	+ Add a button to print a test page
	+ Check if a model has not available drivers instead of showing
	  an empty select
	+ Add function to check if a printer is already available in CUPS
1.1.30
	+ Added IPP and LPD printers
1.1.20
	+ New release
0.12.101
	+ Bug fix: Use isEnabled() instead of deprecated service()
0.12.1
	+ Add support for external printers configured with CUPS 
0.12
	+ Bugfix: Create the `job` table when installing. This readds a
	bunch of lost lines from ubuntu merging.
0.11.101
	+ New release
0.11.100
	+ onInstall() functionality moved to migration script
	+ Bugfix. Quote file names to avoid issues with ppds containing spaces
0.11.99
	+ New release
0.11
	+ New release
0.10.99
	+ New release
0.10
	+ New release
0.9.100
	+ New release
0.9.99
	+ New release
0.9.3
	+ New release
0.9.2
	+ New release
0.9.1
	+ New release
0.9
	+ Added Polish translation
	+ Added German translation

0.8.99
	+ New release
0.8.1
	+ New release
0.8
	+ New release
0.7.99
        + Minor bugfixes
O.7.1
	+ GUI improvements
	+ Use of ebox-sudoers-friendly
0.7
	+ First public release
0.6
	+ Initial release