@@ -1,3 +1,6 @@
+HEAD
+	+ Bug fix: filter some drivers such as /Postcript.+/
+	+ Bug fix: only show Raw model when there is no model available
 1.3.13
 	+ Bug fix: cancel jobs
 	+ Add a button to print a test page
